hphp/hack/test/typecheck/reactive/rx_if_implements6.php.exp
File "rx_if_implements6.php", line 8, characters 28-35:
Method cannot be marked as reactive and conditionally reactive at the same time. (NastCheck[3040])
