hphp/hack/test/typecheck/reactive/rx_if_implements6.php
<?hh // strict

interface Rx1 {}

abstract class A {
  // ERROR: cannot combine uncondition and conditional rx attributes
  <<__RxShallow, __RxIfImplements(Rx1::class)>>
  public abstract function mayberx2(): void;
}
